--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
 
         <div class="address">
           <span class="label">Property address</span><br />
-          G2 Luxe, 6B Ogalade Close, Victoria Island, Lagos.
+          6B Ogalade Close, Victoria Island, Lagos.
         </div>
 
         <div class="divider"></div>
