--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     }
 
     html, body {
-      height: 100%;
+      height: auto;
+      min-height: 100%;
     }
 
     body {
@@ -45,10 +46,8 @@
       background: radial-gradient(circle at top left, #f7f9ff, #e5e7eb);
       color: var(--text);
       min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: stretch;
       padding: 12px;
+      overflow-y: auto;
     }
 
     .shell {
@@ -61,6 +60,7 @@
       display: grid;
       grid-template-columns: minmax(0, 1.05fr) minmax(0, 2fr);
       min-height: 560px;
+      margin: 0 auto;
     }
 
     /* LEFT COLUMN (BRAND) */
@@ -443,18 +443,10 @@
       font-size: 13px;
       line-height: 1.6;
       color: #111827;
-      max-height: 280px;
-      overflow-y: auto;
-      padding-right: 4px;
-    }
-
-    .panel-body::-webkit-scrollbar {
-      width: 5px;
-    }
-
-    .panel-body::-webkit-scrollbar-thumb {
-      background: rgba(148, 163, 184, 0.9);
-      border-radius: 999px;
+      /* allow full height, page scrolls instead of clipping */
+      max-height: none;
+      overflow: visible;
+      padding-right: 0;
     }
 
     .panel-footer {
@@ -633,7 +625,7 @@
       margin-top: 4px;
     }
 
-    /* Ride-hailing brand badges */
+    /* Ride-hailing brand badges (now full clickable buttons) */
 
     .ride-brands {
       display: flex;
@@ -646,12 +638,19 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
-      padding: 5px 10px;
+      padding: 6px 11px;
       border-radius: 999px;
       font-size: 12px;
       font-weight: 500;
       background: #f9fafb;
       border: 1px solid rgba(15, 23, 42, 0.08);
+      text-decoration: none;
+      color: #111827;
+    }
+
+    .ride-badge:hover {
+      background: #eef2ff;
+      border-color: rgba(15, 23, 42, 0.18);
     }
 
     .ride-mark {
@@ -754,10 +753,6 @@
       .cards-area {
         grid-template-columns: 1fr;
         min-height: auto;
-      }
-
-      .panel-body {
-        max-height: none;
       }
     }
 
@@ -1166,18 +1161,33 @@
           </p>
 
           <div class="ride-brands">
-            <div class="ride-badge">
+            <a
+              class="ride-badge"
+              href="https://m.uber.com"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <span class="ride-mark uber"></span>
               <span>Uber</span>
-            </div>
-            <div class="ride-badge">
+            </a>
+            <a
+              class="ride-badge"
+              href="https://bolt.eu"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <span class="ride-mark bolt"></span>
               <span>Bolt</span>
-            </div>
-            <div class="ride-badge">
+            </a>
+            <a
+              class="ride-badge"
+              href="https://indrive.com"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <span class="ride-mark indrive"></span>
               <span>inDrive</span>
-            </div>
+            </a>
           </div>
 
           <div class="two-col-list">
@@ -1202,13 +1212,6 @@
             <li>For late-night rides, wait inside the compound until your driver arrives.</li>
             <li>If you are unsure about a driver or route, feel free to message Queen.</li>
           </ul>
-
-          <p style="margin-top:6px;font-size:12px;color:#6b7280;">
-            Quick access on your device:
-            <a href="https://m.uber.com" target="_blank" rel="noopener noreferrer">Uber</a> ·
-            <a href="https://bolt.eu" target="_blank" rel="noopener noreferrer">Bolt</a> ·
-            <a href="https://indrive.com" target="_blank" rel="noopener noreferrer">inDrive</a>
-          </p>
         `,
       },
       {
