--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
       <div class="pill-row">
         <span class="pill"><span class="pill-dot"></span> Designed for 1–2 adults for comfort</span>
         <span class="pill"><span class="pill-dot"></span> Spacious 2-bedroom luxury finish</span>
-        <span class="pill"><span class="pill-dot"></span> High-speed Wi-Fi & inverter backup</span>
+        <span class="pill"><span class="pill-dot"></span> High-speed Wi-Fi</span>
       </div>
 
       <article class="left-card">
@@ -859,7 +859,7 @@
 
         <div class="address">
           <span class="label">Property address</span><br />
-          G2 Luxe, 6B Ogalade Close, Victoria Island, Lagos.
+          6B Ogalade Close, Victoria Island, Lagos.
         </div>
 
         <div class="divider"></div>
